<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RateMyEPFL</string>
    <string name="sort_by_title">Sort by</string>
    <string name="alphabetic_order">A-Z</string>
    <string name="alphabetic_order_decreasing">Z-A</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="increasing_order">A-Z</string>
    <string name="decreasing_order">Z-A</string>
    <string name="logo_text">RATE MY</string>
    <string name="home_nav_title">Home</string>
    <string name="reviewable_nav_title">Reviewables</string>
    <string name="events_nav_item">Events</string>
    <string name="map_nav_title">Map</string>
    <string name="home_page_title">HOME PAGE</string>
    <string name="event_page_title">Event</string>
    <string name="info_review_icon">Info</string>
    <string name="list_review_icon">Reviews</string>
    <string name="pictures_review_icon">Pictures</string>
    <string name="epfl_logo_description">epfl_logo</string>
    <string name="default_id_text">Default id text</string>
    <string name="photo_cluster_item">Photo of cluster item</string>
    <string name="timetable_nav_title">Timetable</string>
    <string name="button_for_capturing_a_photo_from_the_camera">Button for capturing a photo from the camera</string>
    <string name="button_for_selecting_a_photo_from_the_gallery">Button for selecting a photo from the gallery</string>
    <string name="no_coin">0</string>
    <string name="coin">Coin</string>
    <string name="credits_item">Credits item</string>
    <string name="loading_progress_bar_text">Loading</string>
    <string name="database_error_loading_text">Failed to retrieve data</string>
    <string name="section_picker_title">Section</string>
    <string name="cycle_picker_title">Cycle</string>
    <string name="sort_by_grade_picker_title">Sort by grade</string>
    <string name="section_item_description">sectionItem</string>
    <string name="cycle_picker_description">cyclePickerDescription</string>
    <string name="day_class_creation">SELECT THE DAY AND TIME</string>
    <string name="not_logged_in_text">You are not logged in</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="emoji">&#128522;</string>
    <string name="empty_post_list_message">No %s yet. Be the first to share your thoughts!</string>
    <string name="empty_photo_list_message">No photos yet. Be the first to upload a photo!</string>
    <string name="login_google_text">Sign In with Google</string>
    <string name="visitor_text">Continue as a visitor</string>
    <string name="maps_api_key" tools:ignore="TypographyDashes,Typos">AIzaSyBmyu-adSXBHO7qfyQ4SoAyPt6YO--At1U</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="modify_profile_icon">Modify profile icon</string>
    <string name="gmail_icon">Gmail icon</string>
    <string name="profile_menu">My Profile</string>
    <string name="visitor">Visitor</string>
    <string name="login_drawer">Login</string>
    <string name="logout_drawer">Logout</string>
    <string name="add_review">Add review</string>
    <string name="review_sent_text">Your review was submitted !</string>
    <string name="num_reviews">(%s reviews)</string>
    <string name="zero_num_reviews">(No review submitted)</string>
    <string name="i_like_this_review">I like this review</string>
    <string name="i_don_t_like_this_review">I don\'t like this review</string>
    <string name="anonymous">Anonymous</string>
    <string name="best_rated_order_title">Best rated</string>
    <string name="worst_rated_order_title">Worst rated</string>
    <string name="title_review">How was it?</string>
    <string name="done_button_text">DONE</string>
    <string name="review_text_button">REVIEW</string>
    <string name="title_review_list">Title</string>
    <string name="comment_review_list">Comment</string>
    <string name="review_rate">Click to rate</string>
    <string name="date_review_list">Date</string>
    <string name="rate_review_list">Rate</string>
    <string name="input_title_text">Your review title</string>
    <string name="title_edit_text">Summarise your opinion</string>
    <string name="input_comment_text">Your opinion</string>
    <string name="comment_edit_text">Share your opinion with the community</string>
    <string name="button_for_deleting_a_review">Button for deleting a review</string>
    <string name="add_review_button">Add Review Button</string>
    <string name="course_content_description">course icon</string>
    <string name="course_title">Course title</string>
    <string name="course_title_text">TITLE</string>
    <string name="course_teacher">Course teacher</string>
    <string name="course_teacher_text">TEACHER</string>
    <string name="course_section">Course section</string>
    <string name="course_section_text">SECTION</string>
    <string name="course_credits">Course credits</string>
    <string name="course_credits_text">CREDITS</string>
    <string name="credits">Credits</string>
    <string name="credit_2">2</string>
    <string name="credit_3">3</string>
    <string name="credit_4">4</string>
    <string name="credit_5">5</string>
    <string name="credit_6">6</string>
    <string name="credit_7">7</string>
    <string name="credit_8">8</string>
    <string name="cycle_propedeutics_field_title">Propedeutics</string>
    <string name="cycle_bachelor_field_title">bachelor</string>
    <string name="cycle_master_field_title">master</string>
    <string name="cycle_bachelor_title">Bachelor</string>
    <string name="cycle_master_title">Master</string>
    <string name="architecture_section_title">Architecture</string>
    <string name="chemical_engineering_section_title">Chemical Engineering</string>
    <string name="civil_engineering_section_title">Civil Engineering</string>
    <string name="communication_systems_section_title">Communication Systems</string>
    <string name="computer_sciences_section_title">Computer Sciences</string>
    <string name="electrical_engineering_section_title">Electrical Engineering</string>
    <string name="environmental_engineering_section_title">Environmental Engineering</string>
    <string name="financial_engineering_section_title">Financial Engineering</string>
    <string name="life_sciences_section_title">Life Sciences</string>
    <string name="material_engineering_section_title">Material Engineering</string>
    <string name="mathematics_section_title">Mathematics</string>
    <string name="mechanical_engineering_section_title">Mechanical Engineering</string>
    <string name="micro_engineering_section_title">Micro Engineering</string>
    <string name="mte_section_title">MTE</string>
    <string name="physics_section_title">Physics</string>
    <string name="select_course_fragment">Choose a course</string>
    <string name="add_class_fragment">Add a class</string>
    <string name="course_class_creation">Click here to select a course</string>
    <string name="title_class_creation">Add a class</string>
    <string name="restaurant_content_description">restaurant icon</string>
    <string name="closest_restaurant_title">Closest</string>
    <string name="occupancy_clear">CLEAR</string>
    <string name="occupancy_busy">BUSY</string>
    <string name="occupancy_full">FULL</string>
    <string name="edit_event_title">Edit your event</string>
    <string name="edit_event_name">Your event name</string>
    <string name="limit_participation">Maximum number of participants:</string>
    <string name="event_date">Your event date:</string>
    <string name="event_time">Your event time:</string>
    <string name="event_location">Your event location:</string>
    <string name="add_event">Add event</string>
    <string name="creator">Creator</string>
    <string name="full_event_text">This event is full!</string>
    <string name="registration_no_login_text">You need to login to be able to register!</string>
    <string name="edit_event_no_login_text">You need to login to be able to add an event!</string>
    <string name="event_sent_text">Your event was submitted !</string>
    <string name="event_content_description">event icon</string>
    <string name="register">Register</string>
    <string name="participants">Participants</string>
    <string name="event_date_info_text">DATE</string>
    <string name="event_time_info_text">TIME</string>
    <string name="event_participation_info_text">PARTICIPATION</string>
    <string name="event_date_info">Event date</string>
    <string name="event_time_info">Event time</string>
    <string name="event_creator_info">hosted by %s</string>
    <string name="button_for_editing_an_event">Button for editing an event</string>
    <string name="button_to_record_noise_intensity_of_a_room">Button to record noise intensity of a room</string>
    <string name="decibels">%s dB</string>
    <string name="noise">%s</string>
    <string name="button_for_recording_audio_from_the_microphone">Button for recording audio from the microphone</string>
    <string name="room_noise_info">%1$s (%2$s dB) - %3$s</string>
    <string name="noise_no_measure">No measure yet</string>
    <string name="noise_string">NOISE</string>
    <string name="addClassButton">Add Class Button</string>
    <string name="addclassfragment">Choose a class to add</string>
    <string name="room_content_description">room icon</string>
    <string name="image_seen_in_detail">Image seen in detail</string>
    <string name="picture_of_an_epfl_room">Picture of an EPFL room</string>
    <string name="select_room_fragment">Choose a room</string>
    <string name="room_class_creation">Click here to select a room</string>
    <string name="default_noise_text">You can click on the button to start a new recording !</string>
    <string name="last_message">last_message</string>
    <string name="last_message_date">last_message_date</string>
    <string name="failed_to_retrieve_the_picture_text">Failed to retrieve the picture</string>
    <string name="content_description_loading_image">%s</string>
    <string name="add_review_string">Give your opinion</string>
    <string name="create_post">Create post…</string>
    <string name="icon_of_the_subject">Icon of the subject</string>
    <string name="display_comments">Display comments</string>
    <string name="i_don_t_like_this_subject">I don\'t like this subject</string>
    <string name="i_like_this_subject">i like this subject</string>
    <string name="button_for_deleting_a_subject">Button for deleting a subject</string>
    <string name="subject_indication_title">Create a post</string>
    <string name="subject_sent_text">Your post was submitted!</string>
    <string name="add_post_title">Your post title</string>
    <string name="add_post_title_hint">Insert a title</string>
    <string name="add_post_content">Your post content</string>
    <string name="add_post_content_hint">Insert a content (optional)</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="reply">Reply</string>
    <string name="button_for_deleting_a_comment">Button for deleting a comment</string>
    <string name="comment_sent_text">Your comment was submitted!</string>
    <string name="podium_of_the_top_karma_users">Podium of the top karma users</string>
    <string name="picture_of_the_top_1_user">Picture of the top 1 user</string>
    <string name="picture_of_the_top_2_user">Picture of the top 2 user</string>
    <string name="picture_of_the_top_3_user">Picture of the top 3 user</string>
    <string name="podium_title">Best Karma Raters</string>
    <string name="podium_quote_author">Keanu Reeves</string>
    <string name="podium_quote">\"When you truly understand karma, then you realize you are responsible for everything in your life\"</string>
</resources>