<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/roomReviewInfoFragment"
        android:enabled="true"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/info_review_icon" />
    <item
        android:id="@+id/reviewListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/list_review_icon" />
    <item
        android:id="@+id/roomReviewPictureFragment"
        android:enabled="true"
        android:icon="@drawable/ic_camera_white_24dp"
        android:title="@string/pictures_review_icon" />
    <item
        android:enabled="true"
        android:icon="@drawable/ic_help_white_24dp"
        android:title="@string/todo" />
</menu>
