<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/channel_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@raw/blank_profile_picture" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/channel_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_review_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_message_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/channel_title"
            android:hint="@string/last_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_message_date"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/last_message_content"
            android:hint="@string/last_message_date"/>

    </RelativeLayout>

</LinearLayout>